--- a/Pipfile
+++ b/Pipfile
@@ -35,6 +35,12 @@ werkzeug = "==3.0.3"
 yarl = "==1.9.4"
 
 [dev-packages]
+coverage = "==7.6.0"
+iniconfig = "==2.0.0"
+packaging = "==24.1"
+pluggy = "==1.5.0"
+pytest = "==8.3.2"
+pytest-cov = "==5.0.0"
 
 [requires]
 python_version = "3.12"
