chore: add logging
Add a few logs and the options to set the log level and whether to append or overwrite them

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 POKE_API_PAGE_LIMIT=20
-CALCULATE_TIME=1
+CALCULATE_TIME=True
 POKE_API_URL=https://pokeapi.co/api/v2/berry
+
+LOGS_LEVEL = "INFO"
+RESET_LOGS = True
