--- a/Pipfile
+++ b/Pipfile
@@ -35,6 +35,15 @@ werkzeug = "==3.0.3"
 yarl = "==1.9.4"
 cachelib = "==0.9.0"
 flask-caching = "==2.3.0"
+contourpy = "==1.2.1"
+cycler = "==0.12.1"
+fonttools = "==4.53.1"
+kiwisolver = "==1.4.5"
+matplotlib = "==3.9.1"
+pillow = "==10.4.0"
+pyparsing = "==3.1.2"
+python-dateutil = "==2.9.0.post0"
+six = "==1.16.0"
 
 [dev-packages]
 coverage = "==7.6.0"
