--- a/Pipfile
+++ b/Pipfile
@@ -44,6 +44,7 @@ pillow = "==10.4.0"
 pyparsing = "==3.1.2"
 python-dateutil = "==2.9.0.post0"
 six = "==1.16.0"
+waitress = "==3.0.0"
 
 [dev-packages]
 coverage = "==7.6.0"
